--- a/src/main/resources/com/dasa/challenge/labapp/views/home/home.fxml
+++ b/src/main/resources/com/dasa/challenge/labapp/views/home/home.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.Button?>
 <?import java.net.URL?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.dasa.challenge.labapp.controllers.HomeController">
+      fx:controller="com.dasa.challenge.labapp.controllers.pages.HomeController">
 
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
@@ -15,5 +15,5 @@
 
     <Label fx:id="welcomeText" text="Olá, seja bem-vindo ao SmartLab Inventory!" textAlignment="CENTER"
            styleClass="titleClass"/>
-    <Button text="Iniciar Solicitação" onAction="#onStartProcedure" alignment="CENTER" styleClass="button"/>
+    <Button text="Iniciar Solicitação" onAction="#onStartProcedure" alignment="CENTER" styleClass=" "/>
 </VBox>
