--- a/src/main/resources/com/dasa/challenge/labapp/styles/confirm-procedure/confirm-procedure.css
+++ b/src/main/resources/com/dasa/challenge/labapp/styles/confirm-procedure/confirm-procedure.css
@@ -6,7 +6,12 @@
     background-color: #C0E6DE;
 }
 
-.titleText {
+.confirmProcedureMain {
+    -fx-background-color: #C0E6DE;
+
+}
+
+.confirmProcedureTitle {
     -fx-font-size: 24px;
     -fx-text-fill: #3450D8;
     -fx-font-weight: bold;
@@ -15,10 +20,99 @@
 .fieldSearchBar {
     -fx-border-color: #3450D8;
     -fx-background-color: NONE;
+    -fx-border-radius: 16px;
+    -fx-max-width: 128px;
+
 }
 
 .labelSearchBar {
     -fx-text-fill: #8080A7;
     -fx-font-weight: bold;
-    
+}
+
+.confirmProcedureHeader {
+    -fx-padding: 0 0 12px 0;
+}
+
+.proceduresScrollPane {
+    background-color: NONE;
+    -fx-border-radius: 16px;
+    -fx-background-radius: 16px;
+    -fx-background-color: NONE;
+}
+
+.proceduresContainer {
+    -fx-border-radius: 16px;
+    -fx-background-radius: 16px;
+    -fx-background-color: NONE;
+}
+
+.procedureContainer {
+    -fx-background-color: white;
+    -fx-border-radius: 16px;
+    -fx-background-radius: 16px;
+    -fx-padding: 12px;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.08), 4, 0, 0, 2);
+    -fx-min-width: 240px;
+    -fx-max-width: 240px;
+    -fx-min-height: 180px;
+    -fx-max-height: 180px;
+
+}
+
+.procedureContainer:hover {
+    -fx-cursor: hand;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.15), 6, 0, 0, 4);
+    -fx-scale-x: 1.02;
+    -fx-scale-y: 1.02;
+}
+
+.procedureHeader {
+    -fx-pref-height: 30px;
+    -fx-min-width: 200px;
+    -fx-max-width: 200px;
+}
+
+.procedureBody {
+    -fx-min-width: 200px;
+    -fx-max-width: 200px;
+    -fx-min-height: 140px;
+    -fx-max-height: 140px;
+    -fx-padding: 8 12 8 0;
+    -fx-background-color: transparent;
+    -fx-spacing: 8px;
+}
+
+.procedureTitle {
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #3450D8;
+    -fx-background-color: NONE;
+    -fx-wrap-text: true;
+    -fx-max-width: 200px;
+    -fx-padding: 0 0 4px 0;
+}
+
+.procedureItems, .procedureDescription {
+    -fx-font-size: 12px;
+    -fx-wrap-text: true;
+    -fx-max-width: 200px;
+}
+
+.procedureItems {
+    -fx-text-fill: #555;
+}
+
+.procedureDescription {
+    -fx-text-fill: #777;
+}
+
+.procedureButton {
+    -fx-alignment: center;
+    -fx-padding: 6 12;
+    -fx-background-radius: 8;
+    -fx-background-color: #3450D8;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+    -fx-cursor: hand;
 }
