--- a/src/main/resources/com/dasa/challenge/labapp/views/confirm-procedure/confirm-procedure.fxml
+++ b/src/main/resources/com/dasa/challenge/labapp/views/confirm-procedure/confirm-procedure.fxml
@@ -3,13 +3,25 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.geometry.Insets?>
 <?import com.dasa.challenge.labapp.controllers.components.SearchBar?>
-<VBox alignment="TOP_LEFT" spacing="20.0">
 
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.FlowPane?>
+<fx:root type="VBox" xmlns:fx="http://javafx.com/fxml" styleClass="confirmProcedureMain">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <Label text="Escolha o procedimento" styleClass="titleText"/>
+    <VBox spacing="10.0" styleClass="confirmProcedureHeader">
+        <Label text="Escolha o procedimento" styleClass="confirmProcedureTitle"/>
+        <SearchBar/>
+    </VBox>
 
-    <SearchBar />
-</VBox>
+    <ScrollPane fitToWidth="true" hbarPolicy="NEVER" styleClass="proceduresScrollPane">
+        <FlowPane fx:id="proceduresContainer"
+                  hgap="12.0" vgap="12.0"
+                  prefWidth="600.0"
+                  styleClass="proceduresContainer">
+        </FlowPane>
+    </ScrollPane>
+
+</fx:root>
