--- a/src/main/resources/com/dasa/challenge/labapp/views/home/home.fxml
+++ b/src/main/resources/com/dasa/challenge/labapp/views/home/home.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
-<?import java.net.URL?>
+
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.dasa.challenge.labapp.controllers.pages.HomeController">
+      fx:controller="com.dasa.challenge.labapp.controllers.pages.HomeController" styleClass="homeMain">
 
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
